# katago_retarget

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  analysis.cfg  analysis.py  annotate_sgf.py  download_sgf.py  make_snp_data.py  pyproject.toml  snp_utils.py  subnetwork_probing.py  train.py  train_snp.py
experiments/: check_value.py  visualize_mask.py  visualize_policy.py
job_files/: train_snp_job.yaml
