[tool.poetry]
name = "katago-pessimize"
version = "0.1.0"
description = ""
authors = ["tkwa <kwathomas0@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25"
torch = "^1.0.2"
tqdm = "^4.66.1"
seaborn = "^0.13.0"
matplotlib = "^3.8.1"
einops = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
